--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo Logging in to AWS ECR  
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 339712894953.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=339712894953.dkr.ecr.us-east-1.amazonaws.com/hm-repo-ecr
+      - REPOSITORY_URI=339712894953.dkr.ecr.us-east-1.amazonaws.com/repo-for-hm
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   install:
     runtime-versions:
@@ -43,5 +43,5 @@ artifacts:
   files:
     - models/*
     - package.json
-    - index.js
+    - server.js
     - imagedefinations.json
